--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Atlestimo</h1>
+
+  <p>Atletismo é um conjunto de esportes constituído por varias modalidades: corrida, marcha, lançamentos e saltos. De modo geral, o atletismo é praticado em estádios, com exceção de algumas corridas de longa distância, praticadas em vias públicas ou no campo, como a maratona.
+   </p>
+   <p>O atletismo é a forma organizada mais antiga de competição. As primeiras reuniões organizadas da história foram os Jogos Olímpicos, que os gregos iniciaram no ano 776 a.C. Durante anos, o principal evento olímpico foi o pentatlo, que compreendia lançamentos de disco, salto em comprimento e corrida de obstáculos.
+   </p>
+   <p>Os romanos continuaram celebrando as provas olímpicas depois de conquistar a Grécia no ano 146 a.C. No ano 394 d.C. o imperador romano Teodósio aboliu os jogos. Durante oito séculos não se celebraram competições organizadas de atletismo. Restauram-se na Inglaterra em meados do século XIX, e então as provas atléticas converteram-se gradualmente no esporte favorito dos ingleses.
+   </p>
+
+<h2>Listas</h2>
+   <h3>Principios do Instituto</h3>
+      <ol class="retangulo">
+          <div class="Respeito"><li>Respeito</li></div>
+          <div class="Inclusão"><li>Inclusão</li></div>
+          <div class="Empatia"><li>Empatia</li></div>
+          <div class="Coragem"><li>Coragem</li></div>
+          <div class="Inovação"><li>Inovação</li></div>
+      </ol>
+
+      <h2>Modalidades Treinadas</h2>
   
+      <ul>
+        <li>
+            Corridas de velocidade
+         </li>
+         <li>
+            Lançamentos
+         </li>
+         <li>
+            Salto em distância
+         </li>
+         <li>
+            Provas Combinadas
+         </li>
+         <li>
+            Corridas de resistência
+         </li>
+         </ul>
+
+         <h2>Âncoras</h2>
+         <h3>Âncoras para páginas externas</h3>
+         <a href="https://pt.wikipedia.org/wiki/Atletismo">Ir para a wikipedia sobre atletismo</a>
+         <a href="https://youtu.be/CaaGrb8l_7E">Video sobre atletismo
+         </a>
+
+         <h3>Âncoras para páginas internas</h3>
+
 </body>
 </html>
